// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<td>
  <span
    className="little-spacer-right"
  >
    <QualifierIcon
      qualifier="TRK"
    />
  </span>
  <Connect(Organization)
    organizationKey="org"
  />
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "id": "foo",
        },
      }
    }
  >
    foo
  </Link>
  <TaskType
    task={
      Object {
        "componentKey": "foo",
        "componentName": "foo",
        "componentQualifier": "TRK",
        "id": "bar",
        "organization": "org",
        "type": "REPORT",
      }
    }
  />
</td>
`;

exports[`renders 2`] = `
<td>
  <span
    className="note"
  >
    bar
  </span>
  <TaskType
    task={
      Object {
        "componentKey": undefined,
        "componentName": "foo",
        "componentQualifier": "TRK",
        "id": "bar",
        "organization": "org",
        "type": "REPORT",
      }
    }
  />
</td>
`;
